# wa

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  flake.nix
lib/macros/: Cargo.toml
lib/macros/src/: lib.rs
lib/utils/: Cargo.toml
lib/utils/src/: serde.rs
lib/wa-proto/: Cargo.toml  build.rs
lib/wa_binary/: Cargo.toml
lib/wa_binary/src/: token.rs
lib/wa_proto/: Cargo.toml  build.rs
lib/wa_proto/extractor/: index.js
lib/wa_proto/protos/: WAArmadilloApplication.proto  WAArmadilloBackupMessage.proto  WAArmadilloICDC.proto  WAArmadilloXMA.proto  WACommon.proto  WAConsumerApplication.proto  WAFingerprint.proto  WAMediaEntryData.proto  WAMediaTransport.proto  WAMsgApplication.proto  WAMsgTransport.proto  WAMultiDevice.proto  WAProtobufsChatLockSettings.proto  WAProtobufsDeviceCapabilities.proto  WAProtobufsUserPassword.proto  WASyncAction.proto  WAWebProtobufsCompanionReg.proto  WAWebProtobufsE2E.proto  WAWebProtobufsEphemeral.proto  WAWebProtobufsHistorySync.proto  WAWebProtobufsQuickPromotionSurfaces.proto  WAWebProtobufsReporting.proto  WAWebProtobufsRoutingInfo.proto  WAWebProtobufsVnameCert.proto  WAWebProtobufsWa6.proto  WAWebProtobufsWeb.proto
lib/wa_proto/src/: lib.rs  version.rs  whatsapp.proto
lib/wa_socket/: Cargo.toml
lib/wa_socket/src/: lib.rs
lib/wa_types/: Cargo.toml
lib/wa_types/src/: call.rs  group.rs  jid.rs  lib.rs  message.rs  newsletter.rs  presence.rs  user.rs
