[package]
name = "wa_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.26.2", features = ["derive"] }
time = { version = "0.3.36", features = ["serde", "formatting", "macros", "parsing"] }
wa_proto = { path = "../wa_proto" }
